# simpledb

./: meson.build  shell.nix
.github/workflows/: main.yml
